--- a/frontend/src/containers/UpperBar/UpperSearchBar.scss
+++ b/frontend/src/containers/UpperBar/UpperSearchBar.scss
@@ -2,7 +2,7 @@
   width: 100%;
 
   #input-base {
-    margin: auto;
+    margin-left: 450px;
     background-color: #ffffff;
     width: 400px;
     height: 45px;
